--- a/commonlibrary/src/main/res/values/styles.xml
+++ b/commonlibrary/src/main/res/values/styles.xml
@@ -6,12 +6,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
 
-    <style name="CustomTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="CustomTheme" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="dialog_default_style" parent="@android:style/Theme.Dialog">
@@ -69,6 +69,7 @@
         </item>
         <item name="custom_attr_sb_bg">@color/custom_color_sb_bg_day</item>
         <item name="custom_attr_sb_thumb_bg">@color/custom_color_sb_thumb_bg_day</item>
+        <item name="custom_attr_cb_bg">@color/custom_color_cb_bg_day</item>
     </style>
 
 
@@ -92,6 +93,8 @@
         </item>
         <item name="custom_attr_sb_bg">@color/custom_color_sb_bg_night</item>
         <item name="custom_attr_sb_thumb_bg">@color/custom_color_sb_thumb_bg_night</item>
+        <item name="custom_attr_cb_bg">@color/custom_color_cb_bg_night</item>
+
     </style>
 
 </resources>
