[fix] theme and skin conflict

--- a/video/src/main/res/layout/activity_song_list.xml
+++ b/video/src/main/res/layout/activity_song_list.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="?custom_attr_app_bg"
+    android:orientation="vertical"
+    android:tag="skin">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh_activity_song_list_refresh"
