--- a/video/src/main/res/layout/item_fragment_singer_list.xml
+++ b/video/src/main/res/layout/item_fragment_singer_list.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="歌名"
-            android:textColor="@color/base_color_text_blue"
+            android:textColor="?attr/custom_attr_text_main"
             android:textSize="20sp" />
 
         <TextView
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="3首"
-            android:textColor="@color/base_color_text_white" />
+            android:textColor="?attr/custom_attr_text_sub" />
     </LinearLayout>
 
 </LinearLayout>
