--- a/live/src/main/res/layout/activity_main.xml
+++ b/live/src/main/res/layout/activity_main.xml
@@ -26,14 +26,15 @@
                 app:tabMode="scrollable" />
 
             <View
-                android:layout_width="10dp"
-                android:layout_height="match_parent"
+                android:layout_width="20dp"
+                android:layout_height="40dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:background="@drawable/bg_alpha" />
         </RelativeLayout>
 
         <ImageView
+            android:background="@null"
             android:id="@+id/iv_activity_main_expend_list"
             android:layout_width="30dp"
             android:layout_height="30dp"
