--- a/live/src/main/res/layout/item_fragment_recommend_live_item.xml
+++ b/live/src/main/res/layout/item_fragment_recommend_live_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="15dp"
+    android:paddingBottom="15dp"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -31,10 +31,11 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:layout_marginTop="5dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
