--- a/live/src/main/res/layout/view_activity_main_pop_window.xml
+++ b/live/src/main/res/layout/view_activity_main_pop_window.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <com.example.commonlibrary.baseadapter.SuperRecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/srcv_view_activity_main_pop_window_display"/>
 
 </LinearLayout>
