--- a/news/src/main/res/layout/activity_main.xml
+++ b/news/src/main/res/layout/activity_main.xml
@@ -1,16 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tl_activity_main_tab"
+
+    <FrameLayout
+        android:id="@+id/fl_activity_main_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <RadioGroup
+        android:id="@+id/rg_activity_main_bottom_container"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:tabMode="scrollable"/>
-    <android.support.v4.view.ViewPager
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/vp_activity_main_display"/>
+        android:orientation="horizontal"
+        android:checkedButton="@+id/rb_activity_main_bottom_index">
+        <RadioButton
+            android:textColor="@color/tab_text_color"
+            android:id="@+id/rb_activity_main_bottom_index"
+            android:gravity="center"
+            android:text="首页"
+            android:button="@null"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+        <RadioButton
+            android:textColor="@color/tab_text_color"
+            android:id="@+id/rb_activity_main_bottom_library"
+            android:gravity="center"
+            android:text="图书"
+            android:button="@null"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+        <RadioButton
+            android:textColor="@color/tab_text_color"
+
+            android:gravity="center"
+            android:text="首页"
+            android:button="@null"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+        <RadioButton
+            android:textColor="@color/tab_text_color"
+            android:gravity="center"
+            android:text="首页"
+            android:button="@null"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+        <RadioButton
+            android:textColor="@color/tab_text_color"
+            android:gravity="center"
+            android:text="首页"
+            android:button="@null"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+
+    </RadioGroup>
 </LinearLayout>
