--- a/news/src/main/res/layout/activity_card_info.xml
+++ b/news/src/main/res/layout/activity_card_info.xml
@@ -45,7 +45,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_activity_card_cert_type"/>
+            android:id="@+id/tv_activity_card_info_cert_type"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -72,6 +72,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_activity_card_info_money"/>
+
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="充值"
+            android:id="@+id/btn_activity_card_info_pay"/>
 
 
 
