--- a/news/src/main/res/layout/activity_card_info.xml
+++ b/news/src/main/res/layout/activity_card_info.xml
@@ -74,6 +74,31 @@
             android:id="@+id/tv_activity_card_info_money"/>
 
 
+
+        <LinearLayout
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="金额："/>
+            <EditText
+                android:focusable="false"
+                android:id="@+id/et_activity_card_info_input"
+                android:inputType="number"
+                android:layout_marginLeft="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="请输入金额"/>
+        </LinearLayout>
+
+
+
+
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
