--- a/news/src/main/res/color/tab_text_color.xml
+++ b/news/src/main/res/color/tab_text_color.xml
@@ -2,4 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="false" android:color="@color/tab_text_color_normal"/>
     <item android:state_checked="true" android:color="@color/tab_text_color_selected"/>
+    <item android:state_selected="true" android:color="@color/tab_text_color_selected" />
 </selector>
