--- a/news/src/main/res/layout/fragment_library.xml
+++ b/news/src/main/res/layout/fragment_library.xml
@@ -1,56 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dl_fragment_library_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    tools:openDrawer="end">
+
     <LinearLayout
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_search_white_24dp"/>
+        android:layout_height="match_parent">
 
-        <EditText
-            android:ellipsize="end"
-            android:textColorHint="@color/base_color_text_grey"
-            android:textColor="@color/base_color_text_white"
-            android:textSize="16sp"
-            android:hint="请输入书名或作者名"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:id="@+id/et_fragment_library_input"
-            android:maxLines="2"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/tv_fragment_library_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="搜索"
-            android:textColor="@color/base_color_text_blue"
-            android:textSize="20sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_search_white_24dp" />
+
+            <EditText
+                android:id="@+id/et_fragment_library_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:hint="请输入书名或作者名"
+                android:maxLines="2"
+                android:textColor="@color/base_color_text_white"
+                android:textColorHint="@color/base_color_text_grey"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_fragment_library_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="搜索"
+                android:textColor="@color/base_color_text_blue"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/refresh_fragment_library_refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.example.commonlibrary.baseadapter.SuperRecyclerView
+                android:id="@+id/srcv_fragment_library_display"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 
-
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/refresh_fragment_library_refresh">
-
-        <com.example.commonlibrary.baseadapter.SuperRecyclerView
+    <android.support.design.widget.NavigationView
+        android:layout_gravity="end"
+        android:id="@+id/nv_fragment_library_right_navigation"
+        android:layout_width="-700dp"
+        android:layout_height="match_parent">
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/srcv_fragment_library_display"/>
-    </android.support.v4.widget.SwipeRefreshLayout>
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="限制时间" />
 
-</LinearLayout>
+                <com.example.commonlibrary.baseadapter.SuperRecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/srcv_fragment_library_right_time_display"/>
+
+
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="文献类型" />
+
+                <com.example.commonlibrary.baseadapter.SuperRecyclerView
+                    android:id="@+id/srcv_fragment_library_right_type_display"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="限馆藏地" />
+                <com.example.commonlibrary.baseadapter.SuperRecyclerView
+                    android:id="@+id/srcv_fragment_library_right_place_display"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="分类" />
+                <com.example.commonlibrary.baseadapter.SuperRecyclerView
+                    android:id="@+id/srcv_fragment_library_right_class_display"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+                <Button
+                    android:id="@+id/btn_fragment_library_right_confirm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:text="确定" />
+            </LinearLayout>
+        </ScrollView>
+
+
+    </android.support.design.widget.NavigationView>
+
+
+</android.support.v4.widget.DrawerLayout>
