--- a/news/src/main/res/layout/item_fragment_other_news_list_photo.xml
+++ b/news/src/main/res/layout/item_fragment_other_news_list_photo.xml
@@ -14,6 +14,8 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:textColor="@color/base_color_text_black"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="50dp"
         android:id="@+id/tv_item_fragment_other_news_list_title"
