[feature] add photo set

--- a/news/src/main/res/layout/view_activity_special_news_header.xml
+++ b/news/src/main/res/layout/view_activity_special_news_header.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:id="@+id/iv_view_activity_special_news_header_banner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitCenter"/>
+        android:layout_height="100dp"
+        android:scaleType="fitXY"/>
 
 </LinearLayout>
