--- a/commonlibrary/src/main/res/layout/layout_superrecyclerview_load_more_footer_error_view.xml
+++ b/commonlibrary/src/main/res/layout/layout_superrecyclerview_load_more_footer_error_view.xml
@@ -6,5 +6,6 @@
     android:background="@color/base_color_text_grey"
     android:gravity="center"
     android:padding="15dp"
-    android:text="加载失败"
+    android:text="加载失败,点击重新加载"
+    android:id="@+id/tv_error_view_content"
     android:textColor="@color/base_color_text_blue" />
