--- a/news/src/main/res/layout/activity_other_news_detail.xml
+++ b/news/src/main/res/layout/activity_other_news_detail.xml
@@ -26,8 +26,7 @@
                 android:textColor="?android:textColorPrimary"
                 android:id="@+id/tv_activity_other_news_detail_content"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_height="match_parent"/>
         </LinearLayout>
 
     </ScrollView>
