--- a/news/src/main/res/layout/item_fragment_news_list.xml
+++ b/news/src/main/res/layout/item_fragment_news_list.xml
@@ -35,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/tv_item_fragment_news_list_time_from"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textSize="12sp"
