[fix] dragLayout padding and play problem

--- a/music/src/main/res/layout/fragment_recommend.xml
+++ b/music/src/main/res/layout/fragment_recommend.xml
@@ -49,10 +49,7 @@
             <com.example.commonlibrary.baseadapter.SuperRecyclerView
                 android:id="@+id/srcv_fragment_recommend_song_list"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginTop="20dp" />
-
-
+                android:layout_height="300dp" />
 
 
             <RelativeLayout
@@ -91,14 +88,7 @@
             <com.example.commonlibrary.baseadapter.SuperRecyclerView
                 android:id="@+id/srcv_fragment_recommend_radio"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginTop="20dp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:layout_marginTop="20dp"
-                android:background="@color/divider_line_default_color" />
+                android:layout_height="300dp" />
 
 
             <RelativeLayout
@@ -112,8 +102,8 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:text="最新专辑"
-                    android:textColor="@color/base_color_text_blue"
-                    android:textSize="20sp" />
+                    android:textColor="@color/base_color_text_black"
+                    android:textSize="18sp" />
 
                 <ImageView
                     android:id="@+id/iv_fragment_recommend_album_arrow"
@@ -130,21 +120,14 @@
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@+id/iv_fragment_recommend_album_arrow"
                     android:text="更多"
-                    android:textColor="@color/base_color_text_blue"
-                    android:textSize="16sp" />
+                    android:textColor="@color/base_color_text_grey"
+                    android:textSize="14sp" />
             </RelativeLayout>
 
             <com.example.commonlibrary.baseadapter.SuperRecyclerView
                 android:id="@+id/srcv_fragment_recommend_album"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginTop="20dp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:layout_marginTop="20dp"
-                android:background="@color/divider_line_default_color" />
+                android:layout_height="300dp" />
         </LinearLayout>
     </ScrollView>
 
