--- a/chat/src/main/res/layout/win_xin_fragment_item_layout.xml
+++ b/chat/src/main/res/layout/win_xin_fragment_item_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="90dp"
         android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
-        android:src="@drawable/head"/>
+        android:scaleType="centerCrop"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
