--- a/chat/src/main/res/layout/user_detail_header_layout.xml
+++ b/chat/src/main/res/layout/user_detail_header_layout.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/wallpaper1"
+        android:src="@drawable/wallpaper_bg"
     />
     <!--<ImageView-->
         <!--android:id="@+id/iv_background_cover"-->
