--- a/music/src/main/res/layout/item_fragment_song_list.xml
+++ b/music/src/main/res/layout/item_fragment_song_list.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="20dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="?attr/custom_attr_text_main" />
+        android:textColor="@color/base_color_text_grey"/>
 
 
 </LinearLayout>
