--- a/chat/src/main/res/layout/activity_main_chat.xml
+++ b/chat/src/main/res/layout/activity_main_chat.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.chat.view.DragLayout
+<com.example.chat.view.MainDragLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drag_container"
+    android:id="@+id/dl_activity_main_drag_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wallpaper1">
+    android:background="@drawable/wallpaper_bg">
     <include layout="@layout/activity_left_container"/>
     <include layout="@layout/activity_main_container"/>
-</com.example.chat.view.DragLayout>
+</com.example.chat.view.MainDragLayout>
 
 
