--- a/music/src/main/res/drawable/action_bar_bg.xml
+++ b/music/src/main/res/drawable/action_bar_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/black_transparency_100" />
-    <size android:height="1px" />
+
+    <solid android:color="@color/light_blue_600"/>
 
 </shape>
