--- a/music/src/main/res/layout/activity_song_list.xml
+++ b/music/src/main/res/layout/activity_song_list.xml
@@ -2,9 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?custom_attr_app_bg"
-    android:orientation="vertical"
-    android:tag="skin">
+    android:orientation="vertical">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh_activity_song_list_refresh"
